SERVER-14792 count with a bad hint should fail, even if there is no query predicate